css/style.css
* {
  font-family: Arial, Helvetica, sans-serif;
}

#main {
  width: 100%;
}
.content{
display:flex;
}
#left {
  float: left;
}

.rightbar {
  float: right;
  width: 400px;
}

/*
  ==========================
  Overall Layout
  ==========================
*/

.recommended_header {
  width: 100%;
  display: flex;
}

.up_next {
  font-size: 0.8rem;
  font-weight: 600;
  line-height: 1.2rem;
  color: #444444;
  margin: 3px;
}

.auto_play {
  margin-right: 0px;
  margin-left: auto;
  font-size: 0.8rem;
  font-weight: 600;
  line-height: 1.2rem;
  color: #666666;
  align-items: center;
  justify-content: center;
}

.auto_play img {
  width: 16px;
  height: 16px;
  margin: -1px 4px 0px 4px;
}

.switch {
  position: relative;
  display: inline-block;
  width: 30px;
  height: 17px;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 13px;
  width: 13px;
  left: 2px;
  bottom: 2px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked+.slider {
  background-color: #2196F3;
}

input:focus+.slider {
  box-shadow: 0 0 1px #2196F3;
}

input:checked+.slider:before {
  -webkit-transform: translateX(13px);
  -ms-transform: translateX(13px);
  transform: translateX(13px);
}

/* Rounded sliders */

.slider.round {
  border-radius: 17px;
}

.slider.round:before {
  border-radius: 50%;
}

.recommended_item {
  display: flex;
  margin-top: 10px;
  margin-bottom: 10px;
}

.recommended_img {
  margin: 0px;
}

.recommended_info {
  margin-left: 5px;
  width: 250px;
}

.recommended_title {
  font-size: 0.9rem;
  font-weight: 600;
  line-height: 1.2rem;
  display: block;
  color: #333333;
}

.recommended_publisher {
  font-size: 0.8em;
  font-weight: 300;
  line-height: 1.2rem;
  display: block;
  color: #888888;
}

.recommended_views {
  font-size: 0.8rem;
  font-weight: 300;
  line-height: 1.2rem;
  display: block;
  color: #888888;
}

.show_more {
  text-align: center;
  font-size: 0.7rem;
  font-weight: 600;
  line-height: 1.2rem;
  display: block;
  color: #888888;
  border-top: 1px solid #AAAAAA;
  padding: 5px;
}

.footer {
  clear: both;
}

.footer_one li {
  display: inline;
}

.footer_one li img {
  width: 100px;
}

.footer_one li select {
  min-width: 150px;
  min-height: 25px;
  font-size: 0.8rem;
  font-weight: 500;
  line-height: normal;
  color: #515151;
  margin: 3px;
}

.footer_two li {
  display: inline;
  font-size: 0.8rem;
  font-weight: 600;
  line-height: 1.2rem;
  color: #444444;
  margin: 3px;
}

.footer_three li {
  display: inline;
  font-size: 0.7rem;
  font-weight: 400;
  line-height: 1.2rem;
  color: #666666;
  margin: 3px;
}


/*
==========================
Material Icons
==========================
*/

.material-icons.md-18 { font-size: 18px; }
.material-icons.md-24 { font-size: 24px; }
.material-icons.md-36 { font-size: 36px; }
.material-icons.md-48 { font-size: 48px; }

.material-icons.md-dark { color: rgba(0, 0, 0, 0.54); }
.material-icons.md-dark.md-inactive { color: rgba(0, 0, 0, 0.26); }

.material-icons.md-light { color: rgba(255, 255, 255, 1); }
.material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.3); }

/*
==========================
Custom Styles
==========================
*/

body {
background: #F5F5F5;
margin: 0;
}
.bg-style {
background: #fff;
border: 1px solid #e2e2e2;
}
#nav-drawer {
border-top: 0;
}

* {
box-sizing: border-box;
}


/*
==========================
Overall Layout
==========================
*/

.main-screen {
display: flex;
flex-direction: column;
height: 100vh;
}
.scroll {
display: flex;
flex-direction: column;
-webkit-overflow-scrolling: touch;
justify-content: space-between;
height: 100vh;
}

#nav-drawer {
display: flex;
flex-direction: column;
height: 100vh;
width: 240px;
position: fixed;
left: 0;
transform: translate3d(0,0,0);
transition: transform .15s;
top: 45px;
}
#nav-drawer > * {
flex: none;
}
.masthead {
z-index: 1;
flex: none;
}
.hide {
transform: translate3d(-100%,0,0) !important;
}

/*
==========================
Flex Elements
==========================
*/

.logo-container > *,
.user-container > *,
#nav-drawer > a,
.media,
.lead-btn-row,
.lead-social-btn,
.lead-voting-btn,
.comment-btn-bar,
.button-footer,
.primary-links-footer,
.secondary-links-footer {
display: flex;
cursor: pointer;
}
.masthead,
.content,
.logo-container,
.user-container,
#nav-drawer > a,
.comment-btn-bar > a,
.lead-social-btn > a,
.lead-voting-btn > a,
.next-up-bar {
display: flex;
align-items: center;
}
.masthead,
.lead-btn-row {
justify-content: space-between;
}

.lead-view-count {
align-self: flex-end;
}
.media {
align-items: flex-start;
}
.media-body {
flex: 1;
}
button, li {
flex: none;
}
button {
display: flex;
align-items: center;
}
.next-up-bar > :first-child {
flex: 1;
}
.search {
display: flex;
flex: 1;
margin-left: .5rem;

}
.search-input {
flex: 1;
max-width: 550px;
}
.search-input {
border-radius: 2px 0 0 2px;
border: 1px solid #e2e2e2;
}
.search-button {
border-radius: 0 2px 2px 0;
border-left: 0;
margin: 0;

}

/*
==========================
Spacing & Margin
==========================
*/

.main {
width: 400px;
}

.comments,
.btn-upload,
.btn-notifications {
display: none;
}
.main {
margin-top: 8px;
margin-bottom: 8px;
}
.media-figure {
margin-right: 1em;
}
a, button {
margin: 0 .25rem;
}
ul, li {
margin: .25rem;
}




.bg-style {
padding: .5rem;
}

#nav-drawer > * {
padding: .5rem;
}
.comment-filter {
margin: .75rem 0 .75rem 0;
}
.comment-filter > i {
padding-right: 0;
}
.media-body > h3 {
margin-top: 0;
margin-bottom: .4rem;
}
hr {
border: 1px solid #e2e2e2;
border-bottom: 0;
margin-top: 1rem;
}


/*
==========================
Typography
==========================
*/

h1, h3, h5, p, a, span, button, textarea, li {
font-family: 'Roboto', sans-serif;
}
h1, h3, h5, p, li {
color: #212121;
}
h1 {
font-size: 1.5rem; /* 24px */
font-weight: 400;
}
h3 {
font-size: .8125rem;
font-weight: 500;
}
h5 {
font-size: .8rem;
margin: .4rem 0;
}
p, li, textarea {
font-size: .75rem; /* 12px */
}
textarea {
border: 1px solid #e2e2e2;
line-height: 2;
}
span {
color: #767676;
font-size: .6875rem; /* 11px/16=.6875 */
}
.lead-view-count {
font-size: 1.1875rem;
font-weight: 400;
}
.username {
font-weight: 500;
color: #167ac6;
margin-top: 0;
}
a > span, li {
font-weight: 500;
}
.terms > li {
font-size: .6875rem;
color: #767676;
}
li:hover {
text-decoration: underline;
color: #167ac6;
}
strong {
font-weight: 500;
}
button > span {
font-weight: 500;
color: #333;
}
.footer-btn {
font-weight: 400;
}
#nav-drawer > a > span {
font-size: .8125rem;
font-weight: 400;
color: #222;
}
#nav-drawer > h5 {
color: #cc181e;
}
i {
padding-right: .4rem;
}

/*
Buttons & Links
==========================
*/

a {
text-decoration: none;
}
li {
list-style-type: none;
}
button {
border: 1px solid lightgrey;
background: #f8f8f8;
border-radius: 2px;
}
.subscribe {
display: flex;
}
.subscribe-btn {
background: #e62117;
margin: 0;
border-top-right-radius: 0;
border-bottom-right-radius: 0;
border-right: 0;
border: none;
}
.subscribe-btn > span {
color: #fff;
font-weight: 400;
font-size: .75rem;
}
.subscribe-count {
border-radius: 0 2px 2px 0;
border-left: 0;
font-weight: 400;
font-size: .75rem;
border: 1px solid lightgrey;
background: #f8f8f8;
padding: .32rem;
}
.btn-flat {
text-align: center;
padding-top: .5rem;
border-top: 1px solid #e2e2e2;
}
#nav-drawer > a:hover {
background: #444;
}
#nav-drawer > a:hover > * {
color: #fff;
}

/*
Switch
*/

.switch-container {
cursor: pointer;
position: relative;
}
.switch-bar {
cursor: grab;
background: rgb(22, 122, 198);
width: 31px;
height: 14px;
border-radius: 8px;
}
.switch-circle {
position: absolute;
top: 1px;
left: 18px;
height: 12px;
width: 12px;
border-radius: 50%;
box-shadow: 0 1px 3px 0 rgba(0,0,0,.2),0 1px 1px 0 rgba(0,0,0,.14),0 2px 1px -1px rgba(0,0,0,.12);
background-color: #fff;
z-index: 4;
}


/*
Images
*/

iframe {
width: 400px;
height: 240px;
}
.img-profile {
height: 48px;
width: 48px;

}
.img-aside {
width: 120px;
height: 90px;
}
.logo {
background: no-repeat url('http://s.ytimg.com/yts/imgbin/www-hitchhiker-vflVV84g4.webp') -167px -205px;
height: 30px;
width: 72px;
}
.btn-profile {
background: url('https://yt3.ggpht.com/a/AGF-l78OD14co8EI1BqQiGzYkAv9NRTOloTYxYCR9Q=s900-c-k-c0xffffffff-no-rj-mo');
height: 27px;
width: 27px;
border: 0;
background-size: cover;
border-radius: 50%;
}

/*
Medium Screens
*/

@media all and (min-width: 650px) {
.content {
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
  align-items: flex-start;
}

.main {
  width: 640px;
  flex: none;
  margin-right: 8px;
}
iframe {
  width: 640px;
  height: 350px;
}
.btn-upload,
.btn-notifications,
.comments {
  display: block;
}
.search {
  margin-left: 4rem;
}
}

/*
Large Screens
*/

@media all and (min-width: 1000px) {
.content {
  justify-content: center;
}
}

